# solar-system-opengl

./: .gitignore  CMakeLists.txt  README.md
headers/: CelestialBody.h  CelestialBodyFactory.h  CelestialBodyPicker.h  Engine.h  PlanetFactory.h  PlanetInfoPanel.h  Ring.h  SceneRenderer.h  Skybox.h  SolarSystemApp.h  TextRenderer.h  UIRenderer.h  camera.h  celestialbody.h  debug_utils.h  engine.h  planet.h  planetinfopanel.h  planetpicker.h  ring.h  shader.h  skybox.h  textrenderer.h  texture.h
headers/celestialbody/: CelestialBody.h  CelestialBodyInfoPanel.h
headers/core/: Camera.h  Engine.h
headers/renderers/: SceneRenderer.h  TextRenderer.h
include/glad/: glad.h
lib/: glfw3.lib
shaders/: ring.frag  ring.vert  skybox.frag  skybox.vert
solar-system-opengl/: AstronomicalObject.cpp  AstronomicalObject.h  Engine.cpp  Engine.h  camera.cpp  camera.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h
solar-system-opengl/include/glad/: glad.c
solar-system-opengl/shaders/: object.frag  object.vert
src/: AppConfig.h  Camera.cpp  CelestialBody.cpp  CelestialBodyFactory.cpp  CelestialBodyInfoPanel.cpp  CelestialBodyPicker.cpp  CelestialBodyTypes.h  Engine.cpp  PlanetFactory.cpp  PlanetInfoPanel.cpp  Ring.cpp  Ring.h  SceneRenderer.cpp  Shader.cpp  Skybox.cpp  SolarSystemApp.cpp  SolarSystemApp.h  TextRenderer.cpp  Texture.cpp  UIRenderer.cpp  camera.cpp  celestialbody.cpp  engine.cpp  main.cpp  miniaudio_impl.cpp  planet.cpp  planetinfopanel.cpp  planetpicker.cpp  ring.cpp  shader.cpp  skybox.cpp  textrenderer.cpp  texture.cpp
src/celestialbody/: CelestialBody.cpp  CelestialBody.h  CelestialBodyFactory.cpp  CelestialBodyFactory.h  CelestialBodyInfoPanel.cpp  CelestialBodyPicker.cpp  CelestialBodyPicker.h
src/celestialbody/UI/: CelestialBodyInfoPanel.cpp  CelestialBodyInfoPanel.h
src/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  EngineContext.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp
src/core/audio/: AudioManager.cpp  AudioManager.h
src/core/input/: InputManager.cpp  InputManager.h
src/core/scene/: SceneData.h
src/core/texturing/: TextureManager.cpp  TextureManager.h
src/core/window/: WindowManager.cpp  WindowManager.h
src/graphics/: BufferHandle.cpp  BufferHandle.h  BufferManager.cpp  BufferManager.h
src/graphics/buffer/: BufferHandle.cpp  BufferHandle.h  BufferManager.cpp  BufferManager.h
src/graphics/mesh/: MeshGenerator.cpp  MeshGenerator.h
src/helpers/: RayIntersection.cpp  RayIntersection.h  RenderHelper.cpp  RenderHelper.h
src/renderers/: SceneRenderer.cpp  SceneRenderer.h  TextRenderer.cpp  TextRenderer.h  UIRenderer.cpp  UIRenderer.h
src/rendering/: RenderContext.h  ScreenPosition.h
src/rendering/renderables/scene/: CelestialBody.cpp  CelestialBody.h  ISceneRenderable.h  Ring.cpp  Ring.h  Skybox.cpp  Skybox.h
src/rendering/renderables/ui/: CelestialBodyInfoPanel.cpp  CelestialBodyInfoPanel.h
src/rendering/renderers/: SceneRenderer.cpp  SceneRenderer.h  TextRenderer.cpp  TextRenderer.h  UIRenderer.cpp  UIRenderer.h
src/utils/: debug_utils.h  math_utils.h
